--- a/components/menu-bar/menu.less
+++ b/components/menu-bar/menu.less
@@ -2,7 +2,7 @@
 
 .menu {
 	background: transparent;
-	z-index: 2;
+	z-index: 3;
 }
 
 .menu-background-transparent {
@@ -29,9 +29,9 @@
 	right: 200%;
 	width: 100%;
 	height: 100vh;
-	padding: @spacing-small*5 0 0 @spacing-small;
+	padding: @spacing-default*1.5 0 0 @spacing-small;
 	background: transparent;
-	z-index: 3;
+	z-index: 4;
 
 	.is-open & {
 		right: 0;
@@ -72,7 +72,7 @@
 	opacity: 0;
 
 	&.menu-item-logo {
-		display: none;
+		display: block;
 	}
 
 	@media @screen-medium {
